<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	<CheckBoxPreference
		android:key="accountSync"
	    android:title="@string/preference_title_accountSync"
	    android:summary="@string/preference_summary_accountSync"
		android:defaultValue="true" />
	
	<ListPreference
		android:key="accountSync_user"
	    android:title="@string/preference_title_accountSync_user"
	    android:dependency="accountSync" />
	
	<CheckBoxPreference
		android:key="notifications"
	    android:title="@string/preference_title_notifications"
		android:defaultValue="true" />
	
	<RingtonePreference
		android:key="notificationSound"
	    android:title="@string/preference_title_notificationSound"
		android:ringtoneType="notification"
		android:showDefault="true"
		android:showSilent="true"
		android:defaultValue="content://settings/system/notification_sound"
		android:dependency="notifications" />
	
	<ListPreference
		android:key="pageNumberVisibility"
		android:title="@string/preference_title_pageNumberVisibility"
		android:defaultValue="hidden"
		android:entries="@array/preference_entries_pageNumberVisibility"
		android:entryValues="@array/preference_entryValues_pageNumberVisibility" />
	
</PreferenceScreen>