<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	
	<LinearLayout
		android:id="@+id/progress"
		android:layout_width="@dimen/notice_width"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		android:layout_centerInParent="true">
		
		<TextView
			style="@style/placeholder"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/textSize_large"
			android:text="@string/notice_fetchingLibrary" />
		<ProgressBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:indeterminate="true" />
    	
    </LinearLayout>
	
	<LinearLayout
		android:id="@+id/failed"
		android:layout_width="@dimen/notice_width"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		android:layout_centerInParent="true"
		android:visibility="gone">
		
		<TextView
			style="@style/noticeHeader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/notice_fetchingLibraryFailed_header" />
	    <TextView
			style="@style/notice"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/text_light"
		    android:text="@string/notice_fetchingLibraryFailed" />
		<Button
			android:id="@+id/retry"
			
			style="@android:style/Widget.Holo.Light.Button.Small"
			
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/button_fetchingLibraryRetry" />
		
	</LinearLayout>
    
</RelativeLayout>